--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspecing=¨20¨>
     <tr>
-      <td><img src="m.png" alt="monali profile picture"></td>
+      <td><img src="https://github.com/MonaliVidhate/cv/blob/e6d442d122b4f2aec12b325d8f069090b6012628/m.png?raw=true" alt="monali profile picture"></td>
       <td><h1>Monali vidhate</h1><p><em>Home maker</em> | <strong><a href="https://movingtalent.eu/">hostess (as event staff)</a></strong></p>
       <p>I am IT enggineer. I love <a href="https://www.pinterest.com/pin/775815473309090688/">indian street style panipuri.</a></p></td>
     </tr>
